# robust_reccomendation

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  test.ipynb
config/: config.py  config.yaml
result/exp001/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/: paths.py
src/evaluation/: evaluate.py  metric.py
src/optimization/: estimator.py  make_covariance_matrix.py  model.py  optimize.py
src/prediction/: model.py  predict.py
src/preprocess/: load_data.py
