[tool.poetry]
name = "robust_reccomendation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PuLP = "^2.7.0"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
isort = "^5.13.2"
autoflake = "^2.2.1"
flake8 = "^6.1.0"
ipykernel = "^6.28.0"
ipywidgets = "^8.1.1"

[tool.black]
line-length = 100  # default: 88

[tool.isort]
line_length = 100
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
