[project]
name = "robust-recommendation"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "scikit-surprise>=1.1.4",
    "gurobipy>=11.0.2",
    "numpy>=1.26.4",
    "pathlib>=1.0.1",
    "hydra-core>=1.3.2",
    "tqdm>=4.66.4",
    "japanize-matplotlib>=1.1.3",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.5",
    "ipykernel>=6.29.4",
    "ipywidgets>=8.1.2",
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
]
ignore = [
    "E501", # line too long
]

[tool.ruff]
include = ["*.ipynb", "*.py"]
line-length = 99

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/robust_recommendation"]
